@@ -299,7 +299,7 @@ public class SlidingToolbar extends Composite implements KeyUpHandler, BlurHandl
 	private void syncUI(PanelSizeInfo sizeInfo) {
 	  if (sizeInfo == null) return;
 	  
-		if (sizeInfo.getPanelSizeType().equals("fullscreen")) {
+		if (sizeInfo.getPanelSizeType() != null && sizeInfo.getPanelSizeType().equals("fullscreen")) {
 			setPanelSizeType(PanelSizeType.FULLSCREEN);
 			widthInput.setValue("");
 			heightInput.setValue("");
